Dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,3 +109,11 @@ body {
   transform-origin: bottom;
   will-change: transform, opacity;
 }
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  /* background: linear-gradient(135deg, #ff6ec4, #7873f5); */
+  z-index: -999;
+}
